# cppcookbook

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  Makefile  README.md  STRUCTURE.md  vcpkg.json
01_language/: README.md
02_algorithms/: README.md
03_stl/: README.md
04_libraries/: README.md
05_frameworks/: README.md
06_extending/: README.md
07_systems/: README.md
08_hpc/: README.md
09_domain/: README.md
10_ops/: README.md
10_ops/01_build_systems/: README.md  cmake_syntax.md
10_ops/01_build_systems/00_compiler_cli/: README.md  main.cpp
10_ops/01_build_systems/00_makefile/: Makefile  README.md  logger.cpp  logger.h  main.cpp  math_utils.cpp
10_ops/01_build_systems/01_hello/: CMakeLists.txt  README.md  main.cpp
10_ops/01_build_systems/02_sources/: CMakeLists.txt  README.md  main.cpp  math_utils.h
10_ops/01_build_systems/03_library/: CMakeLists.txt  README.md  main_shared.cpp  main_static.cpp
10_ops/01_build_systems/04_targets/: CMakeLists.txt  README.md  core.cpp  main.cpp
10_ops/01_build_systems/04_targets/include/: core.h
10_ops/01_build_systems/05_compile_options/: CMakeLists.txt  README.md  main.cpp
10_ops/01_build_systems/06_find_package/: CMakeLists.txt  README.md  main.cpp
10_ops/01_build_systems/07_vcpkg/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
10_ops/01_build_systems/08_install/: CMakeLists.txt  README.md  main.cpp  mylib.cpp
10_ops/01_build_systems/08_install/include/: mylib.h
10_ops/01_build_systems/09_ctest/: CMakeLists.txt  README.md  calc.cpp  calc.h  test_basic.cpp  test_edge.cpp
10_ops/01_build_systems/10_generator_expr/: CMakeLists.txt  README.md  main.cpp
10_ops/01_build_systems/11_presets/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
10_ops/01_build_systems/12_enterprise/: CMakeLists.txt  README.md
10_ops/01_build_systems/12_enterprise/app/: CMakeLists.txt  main.cpp
10_ops/01_build_systems/12_enterprise/core/: CMakeLists.txt  engine.cpp
10_ops/01_build_systems/12_enterprise/core/include/core/: engine.h
10_ops/01_build_systems/12_enterprise/tests/: CMakeLists.txt  test_engine.cpp  test_utils.cpp
10_ops/01_build_systems/12_enterprise/utils/: CMakeLists.txt  string_utils.cpp
10_ops/01_build_systems/12_enterprise/utils/include/utils/: string_utils.h
